c/src/test/resources/c/nec_inline_bnc/valid/ex15.ctrl
<controlFile>
  <sourceFile name="../ex15.c" id="1" />
  <run>
    <startPosition fileId="1" line="14" />
    <endPosition fileId="1" line="32" />
  </run>
</controlFile>