c/src/test/resources/c/nec_inline_bnc/invalid/inf5.ctrl
<controlFile>
  <sourceFile name="../inf5.c" id="1" />
  <run>
    <startPosition fileId="1" line="3" />
    <endPosition fileId="1" line="54" />
  </run>
</controlFile>